--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,26 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  get_it: ^8.2.0
+  intl: ^0.20.2
+
+  retrofit: ^4.6.0
+  logger: ^2.6.0  # for logging purpose
+  json_annotation: ^4.9.0
+
+  flutter_hooks: ^0.21.3+1
+  cached_network_image: ^3.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-
+  retrofit_generator: ^10.0.1
+  build_runner: ^2.6.0
+  json_serializable: ^6.10.0
 
 # The following section is specific to Flutter packages.
 flutter:
